Change font, type, and added missing p class

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="waterfall" href="https://www.instagram.com/therollingramblers/" target="_blank"></a>
                 <div class="sub-row">
                 <h2 class="bus ">Journey to the Bus</h2>
-                <p class="moreBus">GChocolate milk brown perfect, enjoy creamy rich creamy brown rich 
+                <p class="moreBus">Chocolate milk brown perfect, enjoy creamy rich creamy brown rich 
                         syrup, chocolate chocolaty creamy, milk creamy, milk. Chocolate in delicious, enjoy 
                         perfect brown, to chocolate drinking delicious taste. Drinking chocolate enjoy. Sipping 
                         home made rich, milky cow, chocolate milk milky creamy. Delicious, milk, creamy, 
@@ -52,7 +52,7 @@
                     boudin tri-tip alcatra beef ribs biltong sausage. Tenderloin pork loin filet mignon, 
                     ham tongue pancetta cow bacon. Meatball spare ribs bacon, hamburger pork ham t-bone chuck 
                     landjaeger.</p>
-                    <p>
+                <p class="descript">
                     Landjaeger ham chuck venison. Ribeye andouille short loin shoulder alcatra beef 
                     fatback cow burgdoggen bacon shank pancetta t-bone doner hamburger. Tri-tip short 
                     ribs t-bone, capicola biltong pancetta pork chop drumstick buffalo. Pastrami turducken 
@@ -69,7 +69,7 @@
                     Kevin ground round alcatra capicola biltong tri-tip. Tail cupim fatback, porchetta jowl 
                     brisket shankle prosciutto ham hock burgdoggen spare ribs beef sausage.</p>
 
-                    <p>
+                <p class="descript">
                     Filet mignon shankle picanha tri-tip sirloin ham drum stick. Pig pork chop sausage jerky. 
                     Short loin spare ribs pork kielbasa tri-tip. Chuck turkey porchetta, alcatra kielbasa 
                     burgdoggen short loin sausage leberkas ball tip shankle flank tenderloin cupim. Drumstick 
