Final comments to complete project

--- a/createst.html
+++ b/createst.html
@@ -20,8 +20,9 @@
         <h2 class="question">Place the animals in the correct spot to complete the sentence!</h1>
 
             <h3>
-            <p class="blanks">The ____________________ chases the ____________________. When you are in the woods, look out for ____________________. 
-             These are all types of Amphibians: ____________________ , ____________________ , ____________________. </p>
+            <p class="blanks">The <div class="a1">____________________</div> chases the <div class='a1'>____________________</div>. 
+                When you are in the woods, look out for <div class='a1'>____________________</div>.  These are all types of 
+                Amphibians: <div class='a1'>____________________</div> , <div class='a1'>____________________</div> , <div class='a1'>____________________</div>. </p>
             </h3>
             <div class="wordbank">
             
