Removed unsecure images and put in bus images

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
             <!-- Random photos that will be replaced with images of our bus build     -->
             <div class="pictures">
                 <div class="pics">
-                    <span ><img class="bus1" src="http://placeimg.com/640/480/animals" alt="_blank"></span>
-                    <span ><img class="bus2"src="http://placeimg.com/640/480/arch" alt="_blank"></span>
-                    <span ><img class="bus3"src="http://placeimg.com/640/480/tech" alt="_blank"></span>
-                    <span ><img class="bus4"src="http://placeimg.com/640/480/people" alt="_blank"></span>
+                    <span ><img class="bus1" src="images/bus1.jpg" alt="_blank"></span>
+                    <span ><img class="bus2"src="images/bus2.jpg" alt="_blank"></span>
+                    <span ><img class="bus3"src="images/bus3.jpg" alt="_blank"></span>
+                    <span ><img class="bus4"src="images/bus4.jpg" alt="_blank"></span>
                 </div>
             </div>
             
